# firefly

./: README.md  example.ts  package.json
.github/workflows/: build-and-test.yml
actor-ffi/: Cargo.toml
actor-ffi/bindings/: benchmark.md
actor-ffi/bindings/c/: Cargo.toml  Makefile  header.h  main.c
actor-ffi/bindings/c/include/: wallet.h
actor-ffi/bindings/c/src/: lib.rs
actor-ffi/bindings/capacitor/demo/: package.json
actor-ffi/bindings/capacitor/demo/android/: capacitor.settings.gradle
actor-ffi/bindings/capacitor/demo/android/app/src/main/assets/: capacitor.config.json
actor-ffi/bindings/capacitor/demo/android/app/src/main/java/com/example/app/: MainActivity.java
actor-ffi/bindings/capacitor/demo/src/: App.svelte
actor-ffi/bindings/java/: .classpath  .project  pom.xml
actor-ffi/bindings/java/src/main/java/org/iota/wallet/: Main.java  Wallet.java  WalletNative.java
actor-ffi/bindings/java/src/test/java/org/iota/wallet/: WalletTest.java
actor-ffi/bindings/node/: benchmark.js  index.js  package.json
actor-ffi/bindings/node-neon/: benchmark.js  package.json
actor-ffi/bindings/node-neon/lib/: index.js
actor-ffi/bindings/node-neon/native/: Cargo.toml
actor-ffi/bindings/node-neon/test/: index.js
actor-ffi/bindings/node/test/: index.js
actor-ffi/bindings/rust-app/: Cargo.toml
actor-ffi/bindings/rust-app/src/: main.rs
actor-ffi/src/: actors.rs  lib.rs
actor-ffi/src/actors/: account.rs  stronghold.rs
communication-poc/: capacitor.config.json  package.json
extension-system-poc/: package.json  rollup.config.js
(+88 files in other folders)
