[package]
name = "rust"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = {version = "=0.1.7", features = ["tokio02"] }
wallet-actor-system = { path = "../.." }
smol-potat = "0.3.1"